<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Cowboy Boot Store</string>
    <string name="dog_age">Age: %1$s</string>
    <string name="dog_hobbies">Hobbies: %1$s</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="grid">Grid</string>
    <string name="dog_photo">dog photo</string>
    <string name="monster_photo">monster</string>
    <string name="monster_flagship">Flagship: %1$s</string>
    <string name="monster_abilities">Abilities: %1$s</string>
    <string name="name">Name: %1$s</string>
    <string name="leather">Leather: %1$s</string>
    <string name="price">\$%1$.2f</string>
    <string name="view_cart">View Cart</string>
    <string name="add_cart">Add to Cart</string>
    <string name="checkout">Continue to Check Out</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="enter_state">Enter State</string>
    <string name="continue_to_confirmation">Continue to Confirmation</string>
    <string name="thank_you_for_your_order">Thank You For Your Order!</string>
    <string name="please_rate_your_transaction">Please Rate Your Transaction</string>
    <string name="confirm_shipping_information">Confirm Shipping Information</string>

</resources>
